k8s/Play.Identity/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: play-identity
  template:
    metadata:
      labels:
        app: play-identity
    spec:
      serviceAccountName: play-identity-sa
      containers:
        - name: play-identity
          image: playeconomyapp.azurecr.io/play-identity:v1

          ports:
            - containerPort: 5000
