k8s/Play.Identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: play-identity
spec:
  type: LoadBalancer
  selector:
    app: play-identity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
