k8s/Play.Identity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: play-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/identity(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: play-identity
                port:
                  number: 80

          - path: /api/catalog(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: play-catalog
                port:
                  number: 80

          - path: /api/inventory(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: play-inventory
                port:
                  number: 80

          - path: /api/trading(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: play-trading
                port:
                  number: 80

          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: play-frontend
                port:
                  number: 80
